--- a/changelog.txt
+++ b/changelog.txt
@@ -1,12 +1,17 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.0
+Date: 14-01-2026
+  Bugfixes:
+    - Things now feel lighter when holding the cube as they should.
+
+---------------------------------------------------------------------------------------------------
 Version: 2.0.0
 Date: 13-01-2026
   Features:
     - Get an achievement for making a cube. And a second achievement for making a legendary one!
 
 ---------------------------------------------------------------------------------------------------
-
 Version: 1.0.0
 Date: 13-01-2026
   Features:
-    - Cube for all your cube needs
+    - Cube for all your cube needs.
