--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.1
+Date: 14-01-2026
+  Locale:
+    - Invented the german language and then added it!
+    - You are welcome Austrian people and German people, you now have a language.
+
+---------------------------------------------------------------------------------------------------
 Version: 2.1.0
 Date: 14-01-2026
   Bugfixes:
