--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,15 @@
 ---------------------------------------------------------------------------------------------------
+Version: 7.2.0
+Date: 19-01-2026
+  Features:
+    - Adds functionality to the Natalie cube!
+    - Added a fancy setting
+  Locale:
+    - ADHS ist sheisse.
+    - Please do the tech tree.
+  Bugfixes:
+    - I have had a bad day, hopefully your's was better.
+---------------------------------------------------------------------------------------------------
 Version: 7.1.0
 Date: 18-01-2026
   Features:
